# dask-operator

./: .dockerignore  .gitignore  Dockerfile  README.md  autoscaler.go  controller.go  controller_test.go  go.mod  go.sum  handler.go  handler_test.go  kind.yaml  main.go  pyproject.toml  requirements-dev.txt  requirements.txt  template.go  template_test.go
.github/workflows/: build.yaml  test.yaml
deploy/: deployment.yaml  kustomization.yaml  rbac.yaml
example/: autoscaler.yaml  cluster.yaml  kustomization.yaml  nameReference.yaml
pkg/apis/dask/: register.go
pkg/apis/dask/v1alpha1/: doc.go  register.go  types.go
src/api/: go.mod  go.sum
src/api/v1alpha1/: cluster_types.go
src/dask_operator/: __init__.py  __main__.py  autoscaling.py  daskcluster.yaml  operator.py  templates.py
test/e2e/: e2e_test.go
tests/: conftest.py  test_autoscaling.py  test_main.py  test_operator.py  test_templates.py
